--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ readme = "README.md"
 requires-python = ">= 3.9.7, <3.12"
 keywords = ["chatgpt","mysql", "sql", "python"]
 classifiers = [
-    "License :: MIT License",
+    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
